# spotify-mcp-fix

./: CHANGELOG.md  README.md  pyproject.toml
src/spotify_mcp/: __init__.py  server.py
