[project]
name = "spotify-mcp"
version = "0.4.0"
description = "Spotify MCP server for Claude - lightweight, async, no spotipy dependency"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
 "mcp>=1.3.0",
 "httpx>=0.27",
]
[[project.authors]]
name = "Varun Srivastava"
email = "varun.neal@berkeley.edu"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
]

[tool.uv.sources]
spotify-mcp = { workspace = true }

[project.scripts]
spotify-mcp = "spotify_mcp:main"
